src/test/ui/parser/bad-value-ident-false.stderr
error: expected identifier, found keyword `false`
  --> $DIR/bad-value-ident-false.rs:3:4
   |
LL | fn false() { } //~ ERROR expected identifier, found keyword `false`
   |    ^^^^^ expected identifier, found keyword

error: aborting due to previous error

