src/test/ui/parser/bad-value-ident-false.rs
// compile-flags: -Z parse-only

fn false() { } //~ ERROR expected identifier, found keyword `false`
fn main() { }
